// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with http link 1`] = `
<a
  className="header-link"
  href="https://foo.com"
>
  <span>
    Foo
  </span>
</a>
`;

exports[`should render correctly with navigation 1`] = `
<button
  className="header-link"
  to="foo"
>
  <span>
    Bar
  </span>
</button>
`;

exports[`should render correctly with no href 1`] = `
<span
  className="header-link"
>
  <span>
    Test
  </span>
</span>
`;
